hsreplaynet/static/styles/premium.scss
.text-premium {
	color: $premium;

	.info-icon {
		color: inherit;
	}
}

.opener-neatless {
	width: 100%;
}

#premium-container {
	max-width: 1540px;
	margin: 0 auto;

	.btn {
		box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
		white-space: normal;
	}

	> header {
		height: 690px;
		position: relative;
		background-repeat: no-repeat;
		background-size: cover;
		text-align: center;
		color: black;
		background-position-y: -10px;
		background-position-x: center;

		#header-background-fade {
			background: linear-gradient(
				to bottom,
				rgba(251, 247, 246, 0.4) 0%,
				$offwhite 90%
			);
			position: absolute;
			height: 100%;
			width: 100%;
			z-index: 0;

			&.fade-radial {
				top: -15%;
				background: radial-gradient(
					rgba(251, 247, 246, 0.7) 0%,
					transparent 60%
				);
			}
		}

		#main-header {
			padding: 200px 0;
			text-transform: uppercase;

			h1 {
				font-family: "Montserrat", sans-serif;
				font-size: 3em;
			}

			h3 {
				font-weight: normal;
			}

			.text-premium {
				text-shadow: 0.02em 0.1em 0.3em #000;
			}

			.promo-button {
				font-size: 1.75em;
				margin-top: 20px;
			}
		}

		.testemonial {
			margin: 0 auto;
			padding: 15px;
			display: flex;
			align-items: center;
			justify-content: center;

			.testemonial-content {
				max-width: 400px;
			}

			h2,
			h4 {
				color: $red;
			}

			h2 {
				font-weight: bold;
			}

			p {
				text-align: left;
				font-size: 1.2em;
			}
		}
	}

	#feature-story {
		> h1 {
			font-family: "Montserrat", sans-serif;
			text-transform: uppercase;
			text-align: center;
			padding: 50px 0 30px 0;
			font-size: 3em;
			opacity: 0.6;
		}

		> h2 {
			opacity: 0.2;
			font-size: 2.5em;
			font-family: "Montserrat", sans-serif;
			text-transform: uppercase;
			text-align: left;
			margin: 50px 0 0 17px;
		}
	}

	#checkout {
		margin: 100px 0;

		h3 {
			font-size: 2em;
			font-weight: bold;
		}
	}
}

.premium-feature-panel {
	.panel-header {
		font-size: 2.4em;
		text-align: center;
	}

	.panel-content {
		display: flex;
		flex-direction: column;
		padding: 10px;
		height: 450px;
		background: linear-gradient(
			to right,
			transparent 0%,
			rgba(29, 54, 87, 0.1) 100%
		) !important;

		> * {
			margin: 0 auto;
		}

		h3 {
			font-weight: bold;
			text-align: center;
			padding: 10px 10px 15px 10px;
			font-size: 2.25em;
			margin-top: 0;
		}

		.list-container {
			display: flex;
			align-items: center;
			flex-direction: column;

			> ul {
				padding: 0;

				li {
					margin-bottom: 5px;
				}
			}
		}

		.promo-button {
			display: block;
		}

		.video-container > * {
			max-height: 200px;
		}
	}

	.image-container {
		display: flex;
		align-items: center;
		height: 45%;

		.video-container,
		.video-container > * {
			height: 100%;
			max-height: 150px;
		}

		> img {
			max-width: 80%;
			max-height: 100%;
			display: block;
			margin: 0 auto;
		}
	}

	.text-container {
		flex: 1 0 0;
		display: flex;
		flex-direction: column;
		justify-content: center;
		align-items: center;
		margin: 0 auto;
		font-size: 1.3em;

		> p {
			padding-bottom: 10px;
			max-width: 75%;
		}
	}

	.content-container {
		height: 65%;
		display: flex;
		flex-direction: column;
	}

	&.wide {
		@media(min-width: 576px) {
			.panel-content {
				display: flex;
				flex-direction: row-reverse;
				height: 250px;
				align-items: center;
			}

			.image-container {
				height: unset;
			}

			.content-container {
				flex: 1 0 0;
				height: unset;
				display: unset;
			}
		}
	}
}

.panel-subscribe {
	position: relative;
	margin-top: 10px;

	.panel-content {
		display: flex;
		justify-content: center;
		align-items: center;
	}

	.subscribe-background {
		width: 106%;
		margin: -3%;
		opacity: 0.6;
		min-width: 800px;
		background: $spacegray;
	}

	.subscribe-content {
		position: absolute;
		top: 0;
		left: 0;
		width: 100%;
		height: 100%;
		display: flex;
		align-items: center;
		justify-content: center;
		font-size: 1.3em;
	}
}
/* ... */

